background image, placeholder contact image

--- a/02-Homework/JADYHomework2/contact.html
+++ b/02-Homework/JADYHomework2/contact.html
@@ -30,5 +30,29 @@
           </ul>
         </div>
       </nav>
+      <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                Contact
+            </div>
+          </div>
+        
+          <div class="row">
+              <div class="col-xl-4">
+                  NAME
+              </div>
+          </div>
+          <div class="row">
+            <div class="col-xl-4">
+                EMAIL
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xl-4">
+                MESSAGE
+            </div>
+        </div>
+
+     
 </body>
 </html>
