--- a/02-Homework/JADYHomework2/index.html
+++ b/02-Homework/JADYHomework2/index.html
@@ -8,11 +8,12 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+  
 
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Jady Tippetts</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,15 +33,17 @@
         </li>
       </ul>
     </div>
-  </nav>
+    
+</nav>
   <div class="container">
     <div class="row">
       <div class="col-md-8">
         <h1>About Me</h1>
         <div class="row">
           <div class="col-md-3">
-            <img src="http://placehold.it/200x200" alt="">
+            <img src="https://img.pixers.pics/pho_wat(s3:700/FO/10/28/22/37/700_FO10282237_16c0ea67d8c6b0d9dbf5946a68ee4207.jpg,467,700,cms:2018/10/5bd1b6b8d04b8_220x50-watermark.png,over,247,650,jpg)/stickers-mad-chef-with-rolling-pin-and-knife.jpg.jpg" alt="">
           </div>
+          
           <div class="col-md-9">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi obcaecati vero cum fugiat eum in quidem?
               Fuga accusantium, aut, nemo dolor laudantium minus quo architecto accusamus voluptatum quasi consectetur
