updated profile picture, readable text through css.

--- a/02-Homework/JADYHomework2/index.html
+++ b/02-Homework/JADYHomework2/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jady Portfolio</title>
+  <title>Jady About</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
@@ -41,7 +41,7 @@
         <h1>About Me</h1>
         <div class="row">
           <div class="col-md-3">
-            <img src="https://img.pixers.pics/pho_wat(s3:700/FO/10/28/22/37/700_FO10282237_16c0ea67d8c6b0d9dbf5946a68ee4207.jpg,467,700,cms:2018/10/5bd1b6b8d04b8_220x50-watermark.png,over,247,650,jpg)/stickers-mad-chef-with-rolling-pin-and-knife.jpg.jpg" alt="">
+            <img src="file:///Users/jadytippetts/Desktop/IMG_3180.jpeg"/>
           </div>
           
           <div class="col-md-9">
