added pictured in portfolio, updated contact file with a submit button and cleaned it up.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h1>About Me</h1>
         <div class="row">
           <div class="col-md-3">
-            <img src="file:///Users/jadytippetts/Desktop/IMG_3180.jpeg" />
+            <img src="./IMG_3180.jpeg"/>
           </div>
 
           <div class="col-md-9">
