--- a/portfolio.html
+++ b/portfolio.html
@@ -31,62 +31,61 @@
       </ul>
     </div>
   </nav>
+  <label id="pictures"></label>
+    <h2>PORTFOLIO PICTURES</h2>
+    <div class="container">
       <div class="row">
-        <div class="card-group">
+        <div class="card-group ">
           <div class="card m-4">
-            <img src="https://via.placeholder.com/350" class="card-img-top" alt="...">
+            <img src="/Users/jadytippetts/Documents/bootcamp/JADYHomework2/Assets/IMG_0209.jpg" 
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
+          </div>
+         <div class="card m-4">
+            <img src="/Users/jadytippetts/Documents/bootcamp/JADYHomework2/Assets/IMG_0209.jpg" 
+            <div class="card-body">
           </div>
           <div class="card m-4">
-            <img src="https://via.placeholder.com/350" class="card-img-top" alt="...">
+            <img src="/Users/jadytippetts/Documents/bootcamp/JADYHomework2/Assets/IMG_0209.jpg" 
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-          </div>
-          <div class="card m-4">
-            <img src="https://via.placeholder.com/350" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="card-group ">
           <div class="card m-4">
-            <img src="https://via.placeholder.com/350" class="card-img-top" alt="...">
+            <img src="/Users/jadytippetts/Documents/bootcamp/JADYHomework2/Assets/IMG_0209.jpg" 
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
+          </div>
+         <div class="card m-4">
+            <img src="/Users/jadytippetts/Documents/bootcamp/JADYHomework2/Assets/IMG_0209.jpg" 
+            <div class="card-body">
           </div>
           <div class="card m-4">
-            <img src="https://via.placeholder.com/350" class="card-img-top" alt="...">
+            <img src="/Users/jadytippetts/Documents/bootcamp/JADYHomework2/Assets/IMG_0209.jpg" 
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-          </div>
-          <div class="card m-4">
-            <img src="https://via.placeholder.com/350" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="card-group ">
+          <div class="card m-4">
+            <img src="/Users/jadytippetts/Documents/bootcamp/JADYHomework2/Assets/IMG_0209.jpg" 
+            <div class="card-body">
+          </div>
+         <div class="card m-4">
+            <img src="/Users/jadytippetts/Documents/bootcamp/JADYHomework2/Assets/IMG_0209.jpg" 
+            <div class="card-body">
+          </div>
+          <div class="card m-4">
+            <img src="/Users/jadytippetts/Documents/bootcamp/JADYHomework2/Assets/IMG_0209.jpg" 
+            <div class="card-body">
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    
+  
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
