--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home/About <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -37,15 +37,15 @@
       <div class="row">
         <div class="card-group ">
           <div class="card m-4">
-            <img src="/Users/jadytippetts/Documents/bootcamp/JADYHomework2/Assets/IMG_0209.jpg" 
+            <img src="./Assets/IMG_9287.jpg" 
             <div class="card-body">
           </div>
          <div class="card m-4">
-            <img src="/Users/jadytippetts/Documents/bootcamp/JADYHomework2/Assets/IMG_0209.jpg" 
+            <img src="./Assets/IMG_6305.jpg" 
             <div class="card-body">
           </div>
           <div class="card m-4">
-            <img src="/Users/jadytippetts/Documents/bootcamp/JADYHomework2/Assets/IMG_0209.jpg" 
+            <img src="./Assets/IMG_6018.jpg" 
             <div class="card-body">
           </div>
         </div>
@@ -53,39 +53,20 @@
       <div class="row">
         <div class="card-group ">
           <div class="card m-4">
-            <img src="/Users/jadytippetts/Documents/bootcamp/JADYHomework2/Assets/IMG_0209.jpg" 
+            <img src="./Assets/IMG_7940.jpg" 
             <div class="card-body">
           </div>
          <div class="card m-4">
-            <img src="/Users/jadytippetts/Documents/bootcamp/JADYHomework2/Assets/IMG_0209.jpg" 
+            <img src="./Assets/IMG_0209.jpg" 
             <div class="card-body">
           </div>
           <div class="card m-4">
-            <img src="/Users/jadytippetts/Documents/bootcamp/JADYHomework2/Assets/IMG_0209.jpg" 
-            <div class="card-body">
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="card-group ">
-          <div class="card m-4">
-            <img src="/Users/jadytippetts/Documents/bootcamp/JADYHomework2/Assets/IMG_0209.jpg" 
-            <div class="card-body">
-          </div>
-         <div class="card m-4">
-            <img src="/Users/jadytippetts/Documents/bootcamp/JADYHomework2/Assets/IMG_0209.jpg" 
-            <div class="card-body">
-          </div>
-          <div class="card m-4">
-            <img src="/Users/jadytippetts/Documents/bootcamp/JADYHomework2/Assets/IMG_0209.jpg" 
+            <img src="./Assets/IMG_5875.jpg" 
             <div class="card-body">
           </div>
         </div>
       </div>
     </div>
-    
-    
-  
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
