--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <title>Jady Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./Assets/style.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -36,16 +36,16 @@
     <div class="container">
       <div class="row">
         <div class="card-group ">
-          <div class="card m-4">
-            <img src="./Assets/IMG_9287.jpg" 
+          <img class="card m-4">
+            <img src="./Assets/IMG_9287.jpg" alt="img"></img>
             <div class="card-body">
           </div>
          <div class="card m-4">
-            <img src="./Assets/IMG_6305.jpg" 
+            <img src="./Assets/IMG_6305.jpg"alt="img"></img> 
             <div class="card-body">
           </div>
           <div class="card m-4">
-            <img src="./Assets/IMG_6018.jpg" 
+            <img src="./Assets/IMG_6018.jpg" alt="img"></img>
             <div class="card-body">
           </div>
         </div>
@@ -53,15 +53,15 @@
       <div class="row">
         <div class="card-group ">
           <div class="card m-4">
-            <img src="./Assets/IMG_7940.jpg" 
+            <img src="./Assets/IMG_7940.jpg" alt="img"></img>
             <div class="card-body">
           </div>
          <div class="card m-4">
-            <img src="./Assets/IMG_0209.jpg" 
+            <img src="./Assets/IMG_0209.jpg" alt="img"></img>
             <div class="card-body">
           </div>
           <div class="card m-4">
-            <img src="./Assets/IMG_5875.jpg" 
+            <img src="./Assets/IMG_5875.jpg" alt="img"></img>
             <div class="card-body">
           </div>
         </div>
