fixed images on portfolio file.  added a new html file for coding projects

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="coding.html">Coding</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
         </li>
       </ul>
@@ -44,7 +47,7 @@
         <h1>About Me</h1>
         <div class="row">
           <div class="col-md-3">
-            <img src="./Assets/IMG_3180.jpeg" />
+            <img src="Assets/phobyu.jpeg" />
           </div>
 
           <div class="col-md-9">
