--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,9 @@
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="coding.html">Coding</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
         </li>
       </ul>
@@ -33,40 +36,40 @@
   </nav>
   <label id="pictures"></label>
     <h2>PORTFOLIO PICTURES</h2>
-    <div class="container">
-      <div class="row">
-        <div class="card-group ">
-          <img class="card m-4">
-            <img src="./Assets/IMG_9287.jpg" alt="img"></img>
-            <div class="card-body">
-          </div>
-         <div class="card m-4">
-            <img src="./Assets/IMG_6305.jpg"alt="img"></img> 
-            <div class="card-body">
-          </div>
-          <div class="card m-4">
-            <img src="./Assets/IMG_6018.jpg" alt="img"></img>
-            <div class="card-body">
-          </div>
-        </div>
+
+    <div class="card-columns">
+      <div class="card">
+        <img src="Assets/wedding.JPG" class="card-img-top" alt="img">
       </div>
-      <div class="row">
-        <div class="card-group ">
-          <div class="card m-4">
-            <img src="./Assets/IMG_7940.jpg" alt="img"></img>
-            <div class="card-body">
-          </div>
-         <div class="card m-4">
-            <img src="./Assets/IMG_0209.jpg" alt="img"></img>
-            <div class="card-body">
-          </div>
-          <div class="card m-4">
-            <img src="./Assets/IMG_5875.jpg" alt="img"></img>
-            <div class="card-body">
-          </div>
-        </div>
+      <div class="card">
+        <img src="Assets/escalante.jpg" class="card-img-top" alt="img">
       </div>
-    </div>
+      <div class="card">
+        <img src="Assets/cambodia.jpg" class="card-img-top" alt="img">
+      </div>
+      <div class="card bg-primary text-white text-center p-3">
+        <blockquote class="blockquote mb-0">
+          <p>“Live, travel, adventure, bless, and don't be sorry.”</p>
+          <footer class="blockquote-footer text-white">
+            <small>
+              Jack Kerouac<cite title="Source Title"></cite>
+            </small>
+          </footer>
+        </blockquote>
+      </div>
+      <div class="card">
+        <img src="Assets/marleyguse.jpg" class="card-img-top" alt="img">
+      </div>
+      <div class="card">
+        <img src="Assets/lamb.jpg" class="card-img-top" alt="img">
+      </div>
+      <div class="card">
+        <img src="Assets/wat.jpg" class="card-img-top" alt="img">
+      </div>
+      </div>
+
+  
+    
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
