--- a/coding.html
+++ b/coding.html
@@ -1,36 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jady Coding Projects</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <link rel="stylesheet" href="./Assets/style.css">
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Jady Tippetts</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home/About <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="coding.html">Coding</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
-        </li>
-      </ul>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./Assets/style.css" />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Jady Tippetts</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html"
+              >Home/About <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="coding.html">Coding</a>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link disabled"
+              href="#"
+              tabindex="-1"
+              aria-disabled="true"
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="card-deck">
+      <div class="card">
+        <img src="Assets/pickapet.png" class="card-img-top" alt="img" />
+        <div class="card-body">
+          <h5 class="card-title">Project 1</h5>
+          <p class="card-text">Pet adoption search site</p>
+          <p>
+            <a href="https://katers0259.github.io/Pick-your-pet/"
+              >Pick your Pet</a
+            >
+          </p>
+          <p class="card-text">
+            <small class="text-muted"
+              >co-contributers: Chris Cooley & Kaitlyn Branagan</small
+            >
+          </p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="Assets/passgen.png" class="card-img-top" alt="img" />
+        <div class="card-body">
+          <h5 class="card-title">Password Generator</h5>
+          <p class="card-text">
+            Generator program that allows the user to select several options to
+            receive a randomized password output
+          </p>
+          <p>
+            <a href="https://jady11.github.io/JadyPasswordGenHW3/"
+              >Get Password</a
+            >
+            <!-- <p class="card-text"><small class="text-muted">co-contributers: Chris Cooley & Kaitlyn Branagan</small></p> -->
+          </p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="Assets/dayplanner.png" class="card-img-top" alt="img" />
+        <div class="card-body">
+          <h5 class="card-title">Workday Planner</h5>
+          <p class="card-text">
+            Day planner with color coded time blocks in a single work day.
+          </p>
+          <p>
+            <a href="https://jady11.github.io/JadyDayplanner/">Plan your day</a>
+            <!-- <p class="card-text"><small class="text-muted">co-contributers: Chris Cooley & Kaitlyn Branagan</small></p> -->
+          </p>
+        </div>
+      </div>
     </div>
-  </nav>
+  </body>
+</html>
