--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
       <div class="card">
         <img src="Assets/cambodia.jpg" class="card-img-top" alt="img">
       </div>
-      <div class="card bg-primary text-white text-center p-3">
+      <div class="card bg-secondary text-white text-center p-3">
         <blockquote class="blockquote mb-0">
           <p>“Live, travel, adventure, bless, and don't be sorry.”</p>
           <footer class="blockquote-footer text-white">
