updated resume on home page.  links to git hub and linkedin in contacts.

--- a/contact.html
+++ b/contact.html
@@ -43,11 +43,12 @@
       <h5 class="card-title">Contact Me!</h5>
       <!-- <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6> -->
       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+      <ul>
       <a href="email" class="card-link">jady11@gmail.com</a>
       <a href="phone" class="card-link">(801)641-2989</a>
-      <a href="github" class="card-link"><i class="fab fa-github" style="color: black"></i></a>
-      <a href="linkedin" class="card-link"><i class="fab fa-linkedin" style="color: blue"></i></a>
-     
+      <a href="https://github.com/Jady11" class="card-link"><i class="fab fa-github" style="color: black"></i></a>
+      <a href="https://www.linkedin.com/in/jady-tippetts-b7a5b1106/" class="card-link"><i class="fab fa-linkedin" style="color: blue"></i></a>
+     </ul>
     
       </div>
       </div>
