--- a/index.html
+++ b/index.html
@@ -51,14 +51,19 @@
           </div>
 
           <div class="col-md-9">
-            <p id="bioText"> This is me. I am married and we are the proud parents to an adopted Doberman. We like to eat..because
+            <p id="bioText"> This is me. I am married and we are the proud parents to an adopted Doberman. We like to
+              eat..because
               I am a Chef. We travel and stay in dangerous places. Our home away from home is a quaint little pioneer
-              home in Escalante, UT. I like turtles... and Star wars.
-              </p>
+              home in Escalante, UT. I have worked as a chef for over 25 years. Looking to be at home more to spend time
+              with my family, travel, and work on the house, I decide to go back to school for web development. I like
+              turtles... and Star wars.
+            </p>
           </div>
         </div>
       </div>
-
+      <div class="alert alert-light" role="alert">
+        My resume <a href="https://drive.google.com/file/d/1W-UjeH3cHVC77NyF90KbFp2Dcv2XvOlt/view?usp=sharing" class="alert-link">lives here!</a> Give it a click if you like.
+      </div>
 
     </div>
 
